# ZeroTrustNPM

./: LICENSE  README.md  pyproject.toml  requirements.txt  zero_trust_npm.py
tests/proj_lockfile/: package-lock.json  package.json
tests/proj_manifest_only/: package.json
tests/proj_node_modules/: package.json
zerotrustnpm/: checks.py  cli.py  scanner.py  utils.py
zerotrustnpm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
