[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zerotrustnpm"
version = "0.1.0"
description = "A Zero Trust Security Scanner for NPM Projects"
readme = "README.md"
authors = [
  { name="Achuth Chandra", email="achuth@example.com" },
]
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "jellyfish>=1.0.3",
    "pyfiglet",
    "rich",
]
requires-python = ">=3.7"

[project.scripts]
zero-trust-npm = "zerotrustnpm.cli:main"

[project.urls]
"Homepage" = "https://github.com/Achuth07/ZeroTrustNPM"
"Bug Tracker" = "https://github.com/Achuth07/ZeroTrustNPM/issues"
